# multi-agentes

./: .gitignore  SCHEMA.md  gerar_inventário.py  historical_sales_data.csv  historical_sales_data.py  pyproject.toml  sales_data.py  sales_data_12000_registros.csv
agentes/: README.md  pyproject.toml
agentes/src/agentes/: crew copy.py  crew.py  main.py
agentes/src/agentes/agents/: agente_previsao.py
agentes/src/agentes/config/: agents.yaml  tasks.yaml
agentes/src/agentes/tools/: analise_dados.py  analise_inventario.py  custom_tool copy.py  custom_tool.py  estrategia_marketing.py  ferramenta_previsao.py  geracao_imagens.py  previsao_demanda.py  sales_forecast_tool.py
agentes/src/agentes/utils/: previsao.py
agentes/src/data/: dados_vendas.csv  historico_vendas.csv  inventario.csv
agentes/src/resultados/: previsao_vendas.md  relatorio_inventario.md  relatorio_marketing.md
agentes/src/resultados/analise/: dados_analise.csv
agentes/src/resultados/previsoes/: previsoes_vendas.csv  top_10_categorias.csv  top_10_produtos.csv
