[project]
name = "agentes"
version = "0.1.0"
description = "agentes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
agentes = "agentes.main:run"
run_crew = "agentes.main:run"
train = "agentes.main:train"
replay = "agentes.main:replay"
test = "agentes.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
